# Chubby-Sphynx-Engine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
Assignment/: AssignmentApplication.cpp  AssignmentApplication.h  CMakeLists.txt  main.cpp
Assignment/resources/objects/: untitled.mtl
Assignment/resources/shaders/: bordervertex.glsl  fragment.glsl  vertex.glsl
Assignment/resources/shaders/backup/: fragment.glsl  vertex.glsl
Engine/: CMakeLists.txt
Engine/GLFWApplication/: CMakeLists.txt  GLFWApplication.cpp  GLFWApplication.h
Engine/GeometricTools/: CMakeLists.txt  GeometricTools.h
Engine/InputHandling/: CMakeLists.txt  key.cpp  key.h  mouse.h
Engine/Rendering/: CMakeLists.txt  bufferlayout.h  camera.h  freecamera.h  indexbuffer.cpp  indexbuffer.h  material.h  model.h  orthographiccamera.h  perspectivecamera.h  rendercommands.h  shader.h  shadersdatatype.h  texturemanager.cpp  texturemanager.h  vertexarray.cpp  vertexbuffer.cpp
SphynxEngine/: CMakeLists.txt
SphynxEngine/Core/: CMakeLists.txt  KeyCodes.h  MouseCodes.h  SphynxCore.h  Window.h  key.h  log.cpp  log.h  mouse.h  sphynxcore.h
SphynxEngine/Events/: CMakeLists.txt  Event.cpp  Event.h  KeyEvent.h  MouseEvent.h  WindowEvent.h  event.cpp  event.h  keyevent.h
SphynxEngine/GeometricTools/: GeometricTools.h
SphynxEngine/InputHandling/: inputhandling.h
SphynxEngine/Logging/: CMakeLists.txt  log.cpp  log.h
SphynxEngine/Math/: CMakeLists.txt  sphynxmath.cpp  sphynxmath.h
SphynxEngine/Rendering/: CMakeLists.txt  SphynxRendering.h  camera.h  lights.h  model.h  modelmatrix.h  orthographiccamera.h  rendercommands.h  rendering.h  shader.cpp  texturemanager.cpp  texturemanager.h  vertexarray.h  vertexbuffer.h
SphynxEngine/Rendering/buffers/: bufferlayout.h  indexbuffer.h  vertexarray.cpp  vertexarray.h  vertexbuffer.h
SphynxEngine/Rendering/camera/: camera.h  freecamera.h  orthographiccamera.h  perspectivecamera.h
SphynxEngine/Rendering/gl_control/: rendercommands.h
SphynxEngine/Rendering/lighting/: lights.h
SphynxEngine/Rendering/modelsystem/: material.h  model.cpp  model.h  modelmatrix.h
SphynxEngine/Rendering/shader/: shader.cpp  shader.h  shadersdatatype.h
SphynxEngine/Rendering/texturemanager/: texturemanager.cpp  texturemanager.h
SphynxEngine/SphynxApplication/: CMakeLists.txt  SphynxApplication.cpp  SphynxApplication.h
SphynxEngine/gui/: CMakeLists.txt  gui_core.cpp  gui_core.h
TestApplication/: CMakeLists.txt  TestApplication.cpp  TestApplication.h  gamegrid.h  main.cpp
TestApplication/resources/objects/: untitled.mtl
TestApplication/resources/shaders/: borderfragment.glsl  fragment.glsl
